--- a/ruins/build.gradle
+++ b/ruins/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
-
+apply plugin: 'com.github.dcendents.android-maven'
 android {
     compileSdkVersion 24
     buildToolsVersion "23.0.3"
@@ -9,37 +9,37 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        versionName "0.0.1"
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
         }
     }
-}
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    //网络库
-    //Rxjava支持
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-    //json解析
-    //view注入
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'    //图片
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        testCompile 'junit:junit:4.12'
+        //网络库
+        //Rxjava支持
+        compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+        //json解析
+        //view注入
+        apt 'com.jakewharton:butterknife-compiler:8.0.1'    //图片
 
 
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:support-v4:24.1.1'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.0'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
-    compile 'com.jakewharton:butterknife:8.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.nineoldandroids:library:2.4.0'
+        compile 'com.android.support:appcompat-v7:24.2.0'
+        compile 'com.android.support:support-v4:24.2.0'
+        compile 'com.squareup.okhttp3:okhttp:3.2.0'
+        compile 'com.squareup.retrofit2:retrofit:2.0.1'
+        compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+        compile 'io.reactivex:rxandroid:1.1.0'
+        compile 'io.reactivex:rxjava:1.1.0'
+        compile 'com.google.code.gson:gson:2.6.2'
+        compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+        compile 'com.jakewharton:butterknife:8.0.1'
+        compile 'com.squareup.picasso:picasso:2.5.2'
+        compile 'com.nineoldandroids:library:2.4.0'
+    }
 }
