--- a/ruins/build.gradle
+++ b/ruins/build.gradle
@@ -27,13 +27,12 @@ android {
         //json解析
         //view注入
         apt 'com.jakewharton:butterknife-compiler:8.0.1'    //图片
-
-
         compile 'com.android.support:appcompat-v7:24.2.0'
         compile 'com.android.support:support-v4:24.2.0'
         compile 'com.squareup.okhttp3:okhttp:3.2.0'
         compile 'com.squareup.retrofit2:retrofit:2.0.1'
         compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+        compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
         compile 'io.reactivex:rxandroid:1.1.0'
         compile 'io.reactivex:rxjava:1.1.0'
         compile 'com.google.code.gson:gson:2.6.2'
