--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
+plugins {
+    id "me.tatarka.retrolambda" version "3.3.1"
+}
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -17,11 +20,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.1'
+    compile 'com.android.support:design:24.2.1'
+    //View注入
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    //SuperTextview
+    compile 'com.github.lygttpod:SuperTextView:1.0.4'
+    compile project(path: ':ruins')
 }
