--- a/ruins/build.gradle
+++ b/ruins/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id "me.tatarka.retrolambda" version "3.3.1"
+}
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.github.dcendents.android-maven'
@@ -17,31 +20,39 @@ android {
             }
         }
 
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
 
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
         testCompile 'junit:junit:4.12'
-        //网络库
-        //Rxjava支持
-        compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-        //json解析
-        //view注入
-        apt 'com.jakewharton:butterknife-compiler:8.0.1'    //图片
         compile 'com.android.support:appcompat-v7:24.2.0'
         compile 'com.android.support:support-v4:24.2.0'
+        compile 'com.android.support:design:24.2.1'
+        //网络与Rxjava相关
         compile 'com.squareup.okhttp3:okhttp:3.2.0'
         compile 'com.squareup.retrofit2:retrofit:2.0.1'
         compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
         compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
         compile 'io.reactivex:rxandroid:1.1.0'
         compile 'io.reactivex:rxjava:1.1.0'
+        compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+        //json解析
         compile 'com.google.code.gson:gson:2.6.2'
         compile 'com.squareup.retrofit2:converter-gson:2.0.1'
-        compile 'com.jakewharton:butterknife:8.0.1'
+        //图片库
         compile 'com.squareup.picasso:picasso:2.5.2'
         compile 'com.nineoldandroids:library:2.4.0'
+        //状态栏相关库
+        compile 'com.jaeger.statusbaruitl:library:1.3.0'
     }
 
 
+}
+
+dependencies {
+    compile 'com.jakewharton:butterknife:8.4.0'
 }
