--- a/ruins/build.gradle
+++ b/ruins/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.github.dcendents.android-maven'
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         minSdkVersion 15
@@ -29,9 +29,9 @@ android {
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
         testCompile 'junit:junit:4.12'
-        compile 'com.android.support:appcompat-v7:25.0.0'
-        compile 'com.android.support:support-v4:25.0.0'
-        compile 'com.android.support:design:25.0.0'
+        compile rootProject.ext.dependencies['appcompat-v7']
+        compile rootProject.ext.dependencies['support-v4']
+        compile 'com.android.support:design:25.1.0'
         //网络与Rxjava相关
         compile 'com.squareup.okhttp3:okhttp:3.2.0'
         compile 'com.squareup.retrofit2:retrofit:2.0.1'
@@ -39,21 +39,19 @@ android {
         compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
         compile 'io.reactivex:rxandroid:1.1.0'
         compile 'io.reactivex:rxjava:1.1.0'
-        compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
         //json解析
-        compile 'com.google.code.gson:gson:2.7'
+        compile 'com.google.code.gson:gson:2.8.0'
         compile 'com.squareup.retrofit2:converter-gson:2.0.1'
         //图片库
         compile 'com.squareup.picasso:picasso:2.5.2'
         compile 'com.nineoldandroids:library:2.4.0'
         //状态栏相关库
         compile 'com.jaeger.statusbaruitl:library:1.3.0'
+        compile 'com.jakewharton:butterknife:8.4.0'
+        compile 'org.jetbrains:annotations:15.0'
+        compile 'org.greenrobot:eventbus:3.0.0'
     }
 
 
 }
 
-dependencies {
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'org.jetbrains:annotations:15.0'
-}
