--- a/ruins/build.gradle
+++ b/ruins/build.gradle
@@ -4,6 +4,8 @@ plugins {
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.ruinszero'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -11,8 +13,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 1
-        versionName "0.0.2"
+        versionCode 2
+        versionName "0.0.3"
         buildTypes {
             release {
                 minifyEnabled false
@@ -48,10 +50,40 @@ android {
         //状态栏相关库
         compile 'com.jaeger.statusbaruitl:library:1.3.0'
         compile 'com.jakewharton:butterknife:8.4.0'
-        compile 'org.jetbrains:annotations:15.0'
+//        compile 'org.jetbrains:annotations:15.0'
         compile 'org.greenrobot:eventbus:3.0.0'
     }
 
+    //---------------------------------------------
+
+// 指定编码
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
+
+// 打包源码
+    task sourcesJar(type: Jar) {
+        from android.sourceSets.main.java.srcDirs
+        classifier = 'sources'
+    }
+
+    task javadoc(type: Javadoc) {
+        failOnError  false
+        source = android.sourceSets.main.java.sourceFiles
+        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+        classpath += configurations.compile
+    }
+
+// 制作文档(Javadoc)
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
 
 }
 
