一些小测试。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:label="@string/title_activity_navigation_view"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity android:name=".TransitionActivity">
+        </activity>
     </application>
 
 </manifest>
