--- a/ruins/src/main/AndroidManifest.xml
+++ b/ruins/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name="ruins.ui.base.AbstractBaseActivity"></activity>
+        <activity android:name="ruins.ui.base.AbstractBaseActivity" />
+
     </application>
 
 </manifest>
