--- a/conf.gradle
+++ b/conf.gradle
@@ -1,20 +1,20 @@
 ext {
     dependencies = [
-            'appcompat-v7': 'com.android.support:appcompat-v7:25.1.0',
-            'support-v4' : 'com.android.support:support-v4:25.1.0',
-            'design' : 'com.android.support:design:25.1.0',
-            'okhttp': 'com.squareup.okhttp3:okhttp:3.2.0',
-            'logging-interceptor':'com.squareup.okhttp3:logging-interceptor:3.3.1',
-            'retrofit':'com.squareup.retrofit2:retrofit:2.0.1',
-            'adapter-rxjava':'com.squareup.retrofit2:adapter-rxjava:2.0.0',
-            'converter-gson':'com.squareup.retrofit2:converter-gson:2.0.1',
-            'rxandroid':'io.reactivex:rxandroid:1.1.0',
-            'rxjava':'io.reactivex:rxjava:1.1.0',
-            'gson':'com.google.code.gson:gson:2.8.0',
-            'picasso':'com.squareup.picasso:picasso:2.5.2',
-            'nineoldandroids':'com.nineoldandroids:library:2.4.0',
-            'statusbaruitl':'com.jaeger.statusbaruitl:library:1.3.0',
-            'eventbus':'org.greenrobot:eventbus:3.0.0',
-            'butterknife':'com.jakewharton:butterknife:8.4.0'
+//            'appcompat-v7': 'com.android.support:appcompat-v7:25.1.0',
+//            'support-v4' : 'com.android.support:support-v4:25.1.0',
+//            'design' : 'com.android.support:design:25.1.0',
+//            'okhttp': 'com.squareup.okhttp3:okhttp:3.2.0',
+//            'logging-interceptor':'com.squareup.okhttp3:logging-interceptor:3.3.1',
+//            'retrofit':'com.squareup.retrofit2:retrofit:2.0.1',
+//            'adapter-rxjava':'com.squareup.retrofit2:adapter-rxjava:2.0.0',
+//            'converter-gson':'com.squareup.retrofit2:converter-gson:2.0.1',
+//            'rxandroid':'io.reactivex:rxandroid:1.1.0',
+//            'rxjava':'io.reactivex:rxjava:1.1.0',
+//            'gson':'com.google.code.gson:gson:2.8.0',
+//            'picasso':'com.squareup.picasso:picasso:2.5.2',
+//            'nineoldandroids':'com.nineoldandroids:library:2.4.0',
+//            'statusbaruitl':'com.jaeger.statusbaruitl:library:1.3.0',
+//            'eventbus':'org.greenrobot:eventbus:3.0.0',
+//            'butterknife':'com.jakewharton:butterknife:8.4.0'
     ]
 }
