--- a/ruins/build.gradle
+++ b/ruins/build.gradle
@@ -1,20 +1,15 @@
-plugins {
-    id "me.tatarka.retrolambda" version "3.3.1"
-}
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.ruinszero'
+group = 'com.github.ruinszero'
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 3
-        versionName "0.0.4"
+        versionCode 4
+        versionName "0.0.5"
         buildTypes {
             release {
                 minifyEnabled false
@@ -31,16 +26,21 @@ android {
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
         testCompile 'junit:junit:4.12'
-        compile rootProject.ext.dependencies['appcompat-v7']
-        compile rootProject.ext.dependencies['support-v4']
-        compile 'com.android.support:design:25.1.0'
-        //网络与Rxjava相关
+        //Support支持库
+        compile 'com.android.support:appcompat-v7:25.3.1'
+        compile 'com.android.support:design:25.3.1'
+        compile 'com.android.support:support-v4:25.3.1'
+        compile 'com.android.support:recyclerview-v7:25.3.1'
+        compile 'com.android.support:support-annotations:25.3.1'
+        compile 'com.android.support:cardview-v7:25.3.1'
+        //Rxjava
+        compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+        compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+        //网络
         compile 'com.squareup.okhttp3:okhttp:3.2.0'
-        compile 'com.squareup.retrofit2:retrofit:2.0.1'
-        compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+        compile 'com.squareup.retrofit2:retrofit:2.3.0'
+        compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
         compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-        compile 'io.reactivex:rxandroid:1.1.0'
-        compile 'io.reactivex:rxjava:1.1.0'
         //json解析
         compile 'com.google.code.gson:gson:2.8.0'
         compile 'com.squareup.retrofit2:converter-gson:2.0.1'
@@ -50,8 +50,11 @@ android {
         //状态栏相关库
         compile 'com.jaeger.statusbaruitl:library:1.3.0'
         compile 'com.jakewharton:butterknife:8.4.0'
-//        compile 'org.jetbrains:annotations:15.0'
+        //ORM
         compile 'org.greenrobot:eventbus:3.0.0'
+        //依赖注入
+        compile 'com.jakewharton:butterknife:8.6.0'
+        annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     }
 
     //---------------------------------------------
@@ -86,4 +89,3 @@ android {
     }
 
 }
-
